--- a/styles/modules/_news-page.css
+++ b/styles/modules/_news-page.css
@@ -29,7 +29,10 @@
     height:40px;
 }
 @mixin atMedium{
-    .newstitle {
-		max-width: 90%;
-    }
+	.h3 {
+		.newstitle {
+			max-width: 90%;
+			float:center;
+		}
+	}
 }
