--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,13 +3,13 @@ Theme Name: Claustra
 Author: Ignace De Keyser
 Version:191130;
 */
+
 @import 'normalize.css';
 @import './base/_mixins';
 @import './base/_global';
 @import './modules/_page-navigation';
 @import './modules/_thumbnailgrid';
 @import './modules/_news-page';
-
 .scrollcontainer{
 	overflow-y: scroll;
 	height:calc(100vh - 170px);
@@ -116,12 +116,13 @@ Version:191130;
 		margin-bottom: 5vw;
 		object-fit:contain;
 	}
-}
-
-@media only screen and (max-height: 600px) {
 	.center-image-page{
-		position:static;
-		max-height:calc(50vh);
-		transform: translate(0%, 0%);
+		position:absolute;
+		top: 50%;
+		  left: 50%;
+		max-width:90%;
+		transform: translate(-50%, -50%);
+		max-height:calc(100vh - 200px);
 	}
+
 }
