--- a/styles/base/_global.css
+++ b/styles/base/_global.css
@@ -50,15 +50,14 @@ h1, h2, h3, h4, h5, h6 {
 	text-align: left;
 }
 
-h1  {
+h1 {
 	clear:both;
-	font-size: 4rem;
+	font-size: 3rem;
 	margin:0;
-	margin-bottom:0rem;
+	margin-bottom:0.25rem;
 	font-weight: 200;
 	float:none;
 	text-align: center;
-
 }
 
 h2  {
@@ -72,27 +71,21 @@ h2  {
 
 }
 
-h3  {
-	clear:right;
-	font-size: 1.5rem;
-	font-weight:normal;
-	text-align: left;
+h3 {
 	margin:0;
-	float:right;
-	width: 326px;
-	padding:0px;
-	margin-bottom:10px;
-
+	margin-bottom: 1rem;
+	text-align:center;
+	width: 100%;
+	padding: 0;
 }
 
-h4  {
-  	font-size: 0.8rem;
-	font-weight:normal;
-	text-align: left;
+h4 {
+	float: left;
 	margin:0;
-	float:right;
-	width: 306px;
-	margin-bottom:0.75rem;
+	margin-bottom: 0.25rem;
+	text-align:left;
+	width: 100%;
+	padding: 0;
 }
 
 h5 {
