--- a/styles/base/_global.css
+++ b/styles/base/_global.css
@@ -22,6 +22,7 @@ html {
   	min-height:100%;
 	  -ms-overflow-style: -ms-autohiding-scrollbar;
 	  margin:0;
+	
 }
 contentinfo {
 	display:none;
@@ -74,6 +75,7 @@ h2  {
 h3 {
 	margin:0;
 	margin-bottom: 1rem;
+	margin-top:1rem;
 	text-align:center;
 	width: 100%;
 	padding: 0;
