--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,33 +32,110 @@ Version:191130;
 
 .wp-block-gallery {
 	float:center;
-	max-width:90%;
-	width:90%;
-	margin:0px;
+	width:80%;
+	margin:auto;
 	padding:0px;
-	margin-left:5%;
+	position: relative;
 
 }
+.imagegallery{
+	height:auto;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	white-space: nowrap;
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
+
+}
+
+#prevbutton {
+    stroke: var(--text0);
+    position:fixed;
+	background:none;
+	border: none;
+    width:32px;
+    height:32px;
+    left: 5%;
+    top:50%;
+	transform: translate(-50%,-100% );
+	transition: 0.3s ease-in-out;
+	opacity: 0;
+}
+
+#nextbutton {
+    
+    stroke: var(--text0);
+    position:fixed;
+    background:none;
+    border: none;
+    width:32px;
+    height:32px;
+    left: 95%;
+    top:50%;
+	transform: translate(-50%,-100% );
+	transition: 0.3s ease-in-out;
+	opacity: 0;
+}
+
+#moreinfobutton {
+    
+    stroke: none;
+    background:none;
+	border: none;
+	display: none;
+}
+
+#info{
+	stroke: none;
+    position:fixed;
+    background:none;
+	border: none;
+    width:auto;
+    height:32px;
+    left: 50%;
+    top:95%;
+    transform: translate(-50%,-50% );
+}
+
+
 .projectinfo {
+	position: absolute;
+	background-color: white;
 	float: none;
-	max-width: 90%;
+	width:100%;
 	text-align:center;
 	margin:auto;
 	margin-bottom: 10px;
 	text-align:justify;
 	text-justify:inter-word;
-
+	scroll-behavior:smooth;
+	transition: 0.8s ease-in-out;
 }
 
+.texttoggleon {
+	top:00%;
+	opacity: 100;
+	visibility: visible;
+	height:70vh;
+	overflow: scroll;
+}
+.texttoggleoff {
+	top:100%;
+	height:5vh;
+	overflow: hidden;
+}
 .projectimage{
 	float:center;
-	max-width:100%;
-	width:inherit;
-	margin:0px;
+	width:100%;
+	height:70vh;
+	margin:auto;
 	padding:0px;
-	margin-bottom: 5vw;
-	object-fit:contain;
+	display:inline-block;
+	object-fit: contain;
+	object-position: 50% 50%;
+	scroll-snap-align: center;
 }
+
 
 .center-image-page{
 	position:absolute;
